--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -203,6 +203,7 @@
 <!ENTITY Ctr_notabbg		"Fjern baggrundsfarve (Windows AeroGlass/8)">
 <!ENTITY Ctr_hightabpos		"Reducer mellem over værktøjslinje (hvis det er muligt)">
 <!ENTITY Ctr_alttabstb		"Alternativ baggrundsfarve">
+<!ENTITY Ctr_alttabstb2		"In maximized mode (tabs on top)">
 
 <!ENTITY Ctr_altmenubar		"Tilføj baggrundsfarve (OS titellinje)">
 <!ENTITY Ctr_altmenubarpos	"Alternativ placering (under Firefox titellinje)">
@@ -221,6 +222,7 @@
 
 <!ENTITY Ctr_closeabarbut	"Skjul luk-knap på tilføjelseslinjer">
 <!ENTITY Ctr_highaddonsbar	"Gør højere">
+<!ENTITY Ctr_addonbarfs		"In fullscreen mode">
 
 <!ENTITY Ctr_animation		"Animation">
 <!ENTITY Ctr_throbberalt	"Alternativ animation ved indlæsning af faneblade">
