--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -203,6 +203,7 @@
 <!ENTITY Ctr_notabbg		"Hintergrundfarbe entfernen (Windows AeroGlass / Win8)">
 <!ENTITY Ctr_hightabpos		"Höhere Position (falls möglich)">
 <!ENTITY Ctr_alttabstb		"Alternative Hintergrundfarbe">
+<!ENTITY Ctr_alttabstb2		"Im maximierten Fenster (Tabs oben)">
 
 <!ENTITY Ctr_altmenubar		"Hintergrundfarbe hinzufügen ('System Titelleiste')">
 <!ENTITY Ctr_altmenubarpos	"Alternative Position (unter der Firefox Titelleiste)">
@@ -221,6 +222,7 @@
 
 <!ENTITY Ctr_closeabarbut	"Entferne 'Schließen'-Schaltfläche">
 <!ENTITY Ctr_highaddonsbar	"Alternative Leistenhöhe">
+<!ENTITY Ctr_addonbarfs		"Im 'Vollbild'-Modus">
 
 <!ENTITY Ctr_animation		"Animationen">
 <!ENTITY Ctr_throbberalt	"Alternative Ladeanzeige auf Tabs">
