--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -203,6 +203,7 @@
 <!ENTITY Ctr_notabbg		"Αφαίρεση χρώματος φόντου (Windows AeroGlass/8)">
 <!ENTITY Ctr_hightabpos		"Μείωση χώρου πάνω από την εργαλειοθήκη (εάν είναι δυνατόν)">
 <!ENTITY Ctr_alttabstb		"Εναλλακτικό χρώμα φόντου">
+<!ENTITY Ctr_alttabstb2		"In maximized mode (tabs on top)">
 
 <!ENTITY Ctr_altmenubar		"Προσθήκη χρώματος φόντου (γραμμή τίτλου Λ.Σ.)">
 <!ENTITY Ctr_altmenubarpos	"Εναλλακτική θέση (παρακάτω από τη γραμμή τίτλου του Firefox)">
@@ -221,6 +222,7 @@
 
 <!ENTITY Ctr_closeabarbut	"Απόκρυψη κουμπιού κλεισίματος εργαλειοθήκης πρόσθετων">
 <!ENTITY Ctr_highaddonsbar	"Αύξηση ύψους">
+<!ENTITY Ctr_addonbarfs		"In fullscreen mode">
 
 <!ENTITY Ctr_animation		"Κινησιομοίωση">
 <!ENTITY Ctr_throbberalt	"Εναλλακτική κινησιομοίωση ενδεικτικού φόρτωσης στις καρτέλες">
