--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -203,6 +203,7 @@
 <!ENTITY Ctr_notabbg		"Eliminar color de fondo (Windows AeroGlass/8)">
 <!ENTITY Ctr_hightabpos		"Reducir espacio sobre la barra de herramientas (si es posible)">
 <!ENTITY Ctr_alttabstb		"Color de fondo alternativo">
+<!ENTITY Ctr_alttabstb2		"In maximized mode (tabs on top)">
 
 <!ENTITY Ctr_altmenubar		"Añadir color de fondo (barra de título del SO)">
 <!ENTITY Ctr_altmenubarpos	"Posición alternativa (debajo de la barra de título de Firefox)">
@@ -221,6 +222,7 @@
 
 <!ENTITY Ctr_closeabarbut	"Ocultar botón cerrar de barras de complementos">
 <!ENTITY Ctr_highaddonsbar	"Incrementar altura">
+<!ENTITY Ctr_addonbarfs		"In fullscreen mode">
 
 <!ENTITY Ctr_animation		"Animación">
 <!ENTITY Ctr_throbberalt	"Animación alternativa del icono de carga (throbber) de la pestaña">
