--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -203,6 +203,7 @@
 <!ENTITY Ctr_notabbg		"Remover a cor do fundo (Windows AeroGlass / Win8)">
 <!ENTITY Ctr_hightabpos		"Reduzir o espaço acima da barra (se possível)">
 <!ENTITY Ctr_alttabstb		"Cor do fundo alternativa">
+<!ENTITY Ctr_alttabstb2		"In maximized mode (tabs on top)">
 
 <!ENTITY Ctr_altmenubar		"Adicionar cor do fundo (Barra de título do Sistema Operacional)">
 <!ENTITY Ctr_altmenubarpos	"Posição alternativa (abaixo da barra de título)">
@@ -221,6 +222,7 @@
 
 <!ENTITY Ctr_closeabarbut	"Ocultar o botão fechar">
 <!ENTITY Ctr_highaddonsbar	"Aumentar a altura">
+<!ENTITY Ctr_addonbarfs		"In fullscreen mode">
 
 <!ENTITY Ctr_animation		"Animações">
 <!ENTITY Ctr_throbberalt	"Guia alternativa 'throbber' ao carregar a animação">
