--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -203,6 +203,7 @@
 <!ENTITY Ctr_notabbg		"移除背景颜色 (Windows AeroGlass / Win8)">
 <!ENTITY Ctr_hightabpos		"减少工具栏上方空间 (如果可以)">
 <!ENTITY Ctr_alttabstb		"替代的背景颜色">
+<!ENTITY Ctr_alttabstb2		"In maximized mode (tabs on top)">
 
 <!ENTITY Ctr_altmenubar		"添加背景颜色 (OS 标题栏)">
 <!ENTITY Ctr_altmenubarpos	"替代位置 (在 Firefox 标题栏下方)">
@@ -221,6 +222,7 @@
 
 <!ENTITY Ctr_closeabarbut	"隐藏附加组件栏关闭按钮">
 <!ENTITY Ctr_highaddonsbar	"增加附加组件栏高度">
+<!ENTITY Ctr_addonbarfs		"In fullscreen mode">
 
 <!ENTITY Ctr_animation		"动画">
 <!ENTITY Ctr_throbberalt	"使用替代的动画效果">
