--- a/xpi/locale/zh-TW/options.dtd
+++ b/xpi/locale/zh-TW/options.dtd
@@ -203,6 +203,7 @@
 <!ENTITY Ctr_notabbg		"移除背景色彩 (Windows AeroGlass / Win8)">
 <!ENTITY Ctr_hightabpos		"縮小分頁列上方空間 (如有可能)">
 <!ENTITY Ctr_alttabstb		"換個背景色彩">
+<!ENTITY Ctr_alttabstb2		"In maximized mode (tabs on top)">
 
 <!ENTITY Ctr_altmenubar		"加上背景色彩 (OS 標題列)">
 <!ENTITY Ctr_altmenubarpos	"換個位置 (標題列下方)">
@@ -221,6 +222,7 @@
 
 <!ENTITY Ctr_closeabarbut	"隱藏附加元件關閉按鈕">
 <!ENTITY Ctr_highaddonsbar	"增加附加元件列高度">
+<!ENTITY Ctr_addonbarfs		"In fullscreen mode">
 
 <!ENTITY Ctr_animation		"動畫">
 <!ENTITY Ctr_throbberalt	"換個分頁載入圖示動畫 (進度指示器)">
