--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -203,6 +203,7 @@
 <!ENTITY Ctr_notabbg		"Rimuovi colore di sfondo (Windows AeroGlass e Win8)">
 <!ENTITY Ctr_hightabpos		"Quando possibile, riduci lo spazio sopra">
 <!ENTITY Ctr_alttabstb		"Colore di sfondo alternativo">
+<!ENTITY Ctr_alttabstb2		"In maximized mode (tabs on top)">
 
 <!ENTITY Ctr_altmenubar		"Aggiungi colore di sfondo (Barra del titolo di sistema)">
 <!ENTITY Ctr_altmenubarpos	"Posizione alternativa (sotto la barra del titolo)">
@@ -221,6 +222,7 @@
 
 <!ENTITY Ctr_closeabarbut	"Nascondi pulsante di chiusura">
 <!ENTITY Ctr_highaddonsbar	"Aumenta l’altezza">
+<!ENTITY Ctr_addonbarfs		"In fullscreen mode">
 
 <!ENTITY Ctr_animation		"Icone animate">
 <!ENTITY Ctr_throbberalt	"Throbber di caricamento scheda alternativo">
