--- a/xpi/locale/zh-TW/options.dtd
+++ b/xpi/locale/zh-TW/options.dtd
@@ -245,6 +245,7 @@
 <!ENTITY Ctr_fx34search		"Firefox 34+ 引入了「新搜尋列介面」。取消勾選這個核取方塊 ，則可恢復為「舊式搜尋列介面」。">
 <!ENTITY Ctr_fx34loop		"Firefox 34+ 實作了「Firefox Hello 即時通訊」功能。取消勾選這個核取方塊 ，則可移除這項功能。">
 <!ENTITY Ctr_fx35devtheme	"Firefox 35+ introduced a new 'developer theme'. Unchecking these preferences disables the 'developer theme' and its button in customizing mode.">
+<!ENTITY Ctr_fx36prefs		"Firefox 36+ introduced preferences in a tab. Unchecking this preference restores the old preference window.">
 
 
 <!ENTITY Ctr_pw_settings	"設定">
