--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -47,6 +47,7 @@
 <!ENTITY Ctr_tabwidthinfo	"Bredden på faneblade styres af TabMixPlus">
 <!ENTITY Ctr_tabwidthinfo2	"Bredden på faneblade styres af TabUtilities">
 <!ENTITY Ctr_tabwidthinfo3	"Værdier under 48px vil for det meste give fejl i grafikken!">
+<!ENTITY Ctr_tabinsertion	"Insert related tab after current tab (about:config)">
 <!ENTITY Ctr_emptyfavicon	"Gendan tomme favicon (hvis webstedet ikke levere et)">
 <!ENTITY Ctr_noemptypticon	"Fjern tomme favicon fra fastgjorte faneblade">
 <!ENTITY Ctr_e10stab_notd	"E10s faneblade: fjern understregning">
@@ -239,6 +240,7 @@
 <!ENTITY Ctr_otherctroptns	"Andre indstillinger">
 <!ENTITY Ctr_cuibotbuttons	"Ekstra knapper i 'Tilpas' tilstand">
 <!ENTITY Ctr_bookmarkoinpw	"Menupunktet 'Åbn i et nyt privat vindue' i genvejsmenu til bogmærker">
+<!ENTITY Ctr_nodevtheme		"Prevent 'Developer Theme' from being enabled">
 
 <!ENTITY Ctr_experttweaks	"Avanceret">
 <!ENTITY Ctr_fx33layers		"Firefox 33+ introducerede 'nye renderingsfunktioner' som i øjeblikket er skyld i 'faneblade som hænger' på nogle systemer. Fjern markeringen for at rette problem.">
