--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -47,6 +47,7 @@
 <!ENTITY Ctr_tabwidthinfo	"Širino zavihkov nadzira TabMixPlus">
 <!ENTITY Ctr_tabwidthinfo2	"Širino zavihkov nadzira TabUtilities">
 <!ENTITY Ctr_tabwidthinfo3	"Vrednosti pod 48 slikovnih točk bodo v večini premerov povzročile napake!">
+<!ENTITY Ctr_tabinsertion	"Insert related tab after current tab (about:config)">
 <!ENTITY Ctr_emptyfavicon	"Obnovi prazno ikono zaznamka (če je stran ne dobavi)">
 <!ENTITY Ctr_noemptypticon	"Odstrani prazno ikono zaznamka iz pripetih zavihkov">
 <!ENTITY Ctr_e10stab_notd	"Zavihki E10s: odstrani podčrtanje">
@@ -239,6 +240,7 @@
 <!ENTITY Ctr_otherctroptns	"Druge nastavitve">
 <!ENTITY Ctr_cuibotbuttons	"Dodatni gumbi v načinu 'prilagoditve'">
 <!ENTITY Ctr_bookmarkoinpw	"Vnos 'Odpri v novem zasebnem oknu' v vsebinskem meniju zaznamkov">
+<!ENTITY Ctr_nodevtheme		"Prevent 'Developer Theme' from being enabled">
 
 <!ENTITY Ctr_experttweaks	"Napredno">
 <!ENTITY Ctr_fx33layers		"Firefox 33+ je vpeljal 'nove značilnosti izrisa', ki na nekaterih sistemih povzročajo 'zamrznitev zavihkov'. Odznačitev te nastavitve bo rešila to težavo.">
