--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -47,6 +47,7 @@
 <!ENTITY Ctr_tabwidthinfo	"As larguras mínimas e máximas são controladas pelo TabMixPlus">
 <!ENTITY Ctr_tabwidthinfo2	"As larguras mínimas e máximas são controladas pelo TabUtilities">
 <!ENTITY Ctr_tabwidthinfo3	"Values below 48px will cause glitches in most cases!">
+<!ENTITY Ctr_tabinsertion	"Insert related tab after current tab (about:config)">
 <!ENTITY Ctr_emptyfavicon	"Restaurar o favicon vazio (se um site não oferecer um)">
 <!ENTITY Ctr_noemptypticon	"Remover o favicon vazio da guia pinada">
 <!ENTITY Ctr_e10stab_notd	"E10s tabs: remove underline">
@@ -239,6 +240,7 @@
 <!ENTITY Ctr_otherctroptns	"Other settings">
 <!ENTITY Ctr_cuibotbuttons	"Botões extra no modo 'personalização'">
 <!ENTITY Ctr_bookmarkoinpw	"'Open in a new private window' entry in bookmarks context menu">
+<!ENTITY Ctr_nodevtheme		"Prevent 'Developer Theme' from being enabled">
 
 <!ENTITY Ctr_experttweaks	"Advanced">
 <!ENTITY Ctr_fx33layers		"Firefox 33+ introduced 'new render features' currently responsible for 'hanging tabs' on some systems. Unchecking this preference resolves this issue.">
