--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -47,7 +47,7 @@
 <!ENTITY Ctr_tabwidthinfo	"Минимальная и максимальная ширина вкладок изменяется расширением TabMixPlus">
 <!ENTITY Ctr_tabwidthinfo2	"Минимальная и максимальная ширина вкладок изменяется расширением TabUtilities">
 <!ENTITY Ctr_tabwidthinfo3	"Значение ниже 48px вызовет сбои в большинстве случаев!">
-<!ENTITY Ctr_tabinsertion	"Insert related tab after current tab (about:config)">
+<!ENTITY Ctr_tabinsertion	"Вставить соответствующую вкладку после текущей вкладке (about:config)">
 <!ENTITY Ctr_emptyfavicon	"Восстановить пустой значок на вкладках">
 <!ENTITY Ctr_noemptypticon	"Удалить пустой значок из прикреплённой вкладки">
 <!ENTITY Ctr_e10stab_notd	"E10s вкладки: удалить подчёркивание">
@@ -223,7 +223,7 @@
 
 <!ENTITY Ctr_closeabarbut	"Скрыть кнопку закрытия">
 <!ENTITY Ctr_highaddonsbar	"Увеличить высоту">
-<!ENTITY Ctr_addonbarfs		"In fullscreen mode">
+<!ENTITY Ctr_addonbarfs		"В полноэкранном режиме">
 
 <!ENTITY Ctr_animation		"Анимация">
 <!ENTITY Ctr_throbberalt	"Альтернативная анимация загрузки вкладки">
@@ -240,14 +240,14 @@
 <!ENTITY Ctr_otherctroptns	"Другие настройки">
 <!ENTITY Ctr_cuibotbuttons	"Дополнительные кнопки в режиме «Настройка»">
 <!ENTITY Ctr_bookmarkoinpw	"«Открыть в новом приватном окне» в контекстном меню закладок">
-<!ENTITY Ctr_nodevtheme		"Prevent 'Developer Theme' from being enabled">
+<!ENTITY Ctr_nodevtheme		"Prevent 'Тема разработчика' from being enabled">
 
 <!ENTITY Ctr_experttweaks	"Продвинутые">
 <!ENTITY Ctr_fx33layers		"С Firefox 33+ новые возможности визуализации, на некоторых системах вызывает ошибки с вкладками (нет реакции, вкладки заморожены). Отключение этой опции решает проблему.">
 <!ENTITY Ctr_fx34search		"С Firefox 34+ новая панель поиска. Отключение этой опции позволяет вернуть старую панель поиска.">
 <!ENTITY Ctr_fx34loop		"С Firefox 34+ добавлен клиент для связи в режиме реального времени. Отключение параметра удаляет эту функцию.">
 <!ENTITY Ctr_fx35devtheme	"С Firefox 35+ введена новая «Тема разработчика». Отключение параметра удаляет её и соответствующую кнопку в режиме «Настройка».">
-<!ENTITY Ctr_fx36prefs		"Firefox 36+ introduced preferences in a tab. Unchecking this preference restores the old preference window.">
+<!ENTITY Ctr_fx36prefs		"Firefox 36+ настройки в новой вкладке. Если снять этот параметр, то восстанавливает старое окно настроек.">
 
 
 <!ENTITY Ctr_pw_settings	"Настройки">
