--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -240,7 +240,7 @@
 <!ENTITY Ctr_otherctroptns	"Другие настройки">
 <!ENTITY Ctr_cuibotbuttons	"Дополнительные кнопки в режиме «Настройка»">
 <!ENTITY Ctr_bookmarkoinpw	"«Открыть в новом приватном окне» в контекстном меню закладок">
-<!ENTITY Ctr_nodevtheme		"Prevent 'Тема разработчика' from being enabled">
+<!ENTITY Ctr_nodevtheme		"Предотвращение активации «Тема разработчика»">
 
 <!ENTITY Ctr_experttweaks	"Продвинутые">
 <!ENTITY Ctr_fx33layers		"С Firefox 33+ новые возможности визуализации, на некоторых системах вызывает ошибки с вкладками (нет реакции, вкладки заморожены). Отключение этой опции решает проблему.">
